2008-05-26  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/Makefile.* src/formats/Makefile.*: Add versioned install
	directories for formats. Fixes PR#1905093.

2005-05-26  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/openbabel-csharp.i: Creating SWIG wrapper for C#
	* windows-vc2005/OpenBabelOBF.sln, OBJava, OBCSharp: Creating projects
	for OBJava and OBCSharp

2008-05-24  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/builder.cpp: Fix bug. CorrectStereoAtoms was not checking the 
	size of refs, before doing refs[0]...refs[3] (thanks Noel)

2008-05-25 Chris Morley
	
	windows-vc2005/examples: new folder with an example project
	for OBF build. Will replace /template.

2008-05-24  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp: Setup(), delete TorsionData before using 
	FOR_TORSION_OF_MOL. (fixed #1954233)

	* windows-vc2005/OBCommonFormats/OBCommonFormats.vcproj: Correct
	location for obmolecformat.cpp

2005-05-24  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/java/README: Updated instructions for using Java bindings on
	Linux

2008-05-23  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* windows-vc2005/openbabel.sln: remove non-existing OBPython and test, 
	add template.

	* windows-vc2005/OpenBabelDLL/OpenBabelDLL.vcproj: move obmolecformats 
	from formats to sources.

	* windows-vc2005/template/*.*: Example of a C++ program using openbabel.

2005-05-23  Marcus D. Hanwell  <marcus@cryos.org>

	* include/openbabel/obconversion.h: Removed extra qualification on
	OpenInAndOutFiles which broke compilation here.

2008-05-23 Chris Morley

	* include/openbabel/obconversion.h, src/obconversion.cpp:
	Add OBConversion::OpenInAndOutFiles to aid scripting

2008-05-22  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/mol.cpp: SetTorsion(), move j=*i out of this for loop:
	for (i = atom.begin(), j = *i; ... ; i++, j = *i)
	This was causing weird results in windows (MSVC2005). Thanks 