@@ -3,6 +3,9 @@
 	* src/Makefile.* src/formats/Makefile.*: Add versioned install
 	directories for formats. Fixes PR#1905093.
 
+	* src/formats/hinformat.cpp: Fix PR#1947913 with hang during HIN
+	reading.
+
 2005-05-26  Noel O'Boyle  <baoilleach@gmail.com>
 
 	* scripts/openbabel-csharp.i: Creating SWIG wrapper for C#
